# tenitsky-prompt-cycler-simple

./: .gitignore  CHANGELOG.md  DESCRIPTION.md  LICENSE  README.md  __init__.py  prompt_cycler.py  pyproject.toml  requirements.txt
